--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Julia Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div id="board">
         <h1>Tic Tac Toe</h1>
-        <div class="row"></div>
+        <div class="row">
             <div class="top left"></div>
             <div class="top middle"></div>
             <div class="top right"></div>
-        <div class="row"></div>
+        </div>
+        <div class="row">
             <div class="center left"></div>
             <div class="center middle"></div>
             <div class="center right"></div>
-        <div class="row"></div>
+        </div>
+        <div class="row">
             <div class="bottom left"></div>
             <div class="bottom middle"></div>
             <div class="bottom right"></div>
+        </div>
     </div>
 </body>
 
